Fix uogcard link contrast

--- a/src/styles/stats.css
+++ b/src/styles/stats.css
@@ -22,6 +22,10 @@ body.basic-page .uog-card {
 	min-width: 25%;
 }
 
+body.basic-page .uog-card a {
+	color: var(--uog-color-body-copy-link-on-light);
+}
+
 body.program .uog-card dt,
 body.basic-page .uog-card dt {
 	font-size: 5rem;
